Changed site title

--- a/LeagueDashboardAPI/LeagueDashboardAPI.csproj
+++ b/LeagueDashboardAPI/LeagueDashboardAPI.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amazon.Lambda.AspNetCoreServer" Version="7.3.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
